--- a/src/components/FilterList.module.css
+++ b/src/components/FilterList.module.css
@@ -7,6 +7,7 @@
     border-radius: 6px;
     color: #111;
     background: #e9f1f7;
+    width: 100%;
 }
 
 .clearBtn {
@@ -25,4 +26,10 @@
 
 .clearBtn:hover {
     background: #241d2e;
+}
+
+.form {
+    display: flex;
+    flex-direction: row;
+
 }
