--- a/src/components/UserForm.module.css
+++ b/src/components/UserForm.module.css
@@ -1,16 +1,25 @@
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .userInput {
     font-family: inherit;
     font-size: 1.2rem;
     padding: 0.5rem;
-    margin: .3rem;
+    margin: .3rem 0;
     border: none;
     border-radius: 6px;
     color: #111;
     background: #e9f1f7;
+    width: 100%;
 }
 
-.label {
-    margin-bottom: 13rem;
+.buttons {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
 }
 
 .add {
@@ -23,7 +32,7 @@
     border-radius: 6px;
     color: white;
     background: #623cea;
-
+    width: 100%;
     cursor: pointer;
 }
 
