--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,10 +1,9 @@
 .card {
-    border: 1px solid #333;
     border-radius: 10px;
     background: #fff;
     font-family: sans-serif;
 
-    margin: 1rem;
+    margin: 1rem auto;
     padding: 1rem;
 
     display: flex;
@@ -12,4 +11,12 @@
     justify-content: center;
     align-items: stretch;
     box-shadow: 3px 3px 1rem rgba(0,0,0,0.3);
+
+    width: 800px;
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 95vw;
+    }
 }
