add css modules composition

--- a/src/components/FilterList.module.css
+++ b/src/components/FilterList.module.css
@@ -1,35 +1,16 @@
 .filterInput {
-    font-family: inherit;
-    font-size: 1rem;
-    padding: 0.7rem;
-    margin-right: 1rem;
-    border: none;
-    border-radius: 6px;
-    color: #111;
-    background: #e9f1f7;
-    width: 100%;
+    composes: input from "./UI/commonInput.css";
 }
 
 .clearBtn {
-    font-family: inherit;
-    font-size: 1.3rem;
-    font-weight: bold;
-
-    padding: 0.5rem;
-    border: none;
-    border-radius: 6px;
-    color: white;
-    background: #54426b;
-
-    cursor: pointer;
-}
-
-.clearBtn:hover {
-    background: #241d2e;
+    composes: btn from "./UI/commonBtn.css";
+    composes: clear from "./UI/commonBtn.css";
+    margin-left: 10px;
 }
 
 .form {
     display: flex;
     flex-direction: row;
+    align-items: center;
 
 }
