--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,11 @@
 }
 
 body {
-  background-color: #e9f1f7;
+  background-color: #b8c6db;
+  background-image: linear-gradient(225deg, #b8badb 0%, #f5f7fa 74%);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  height: 100vh;
+  overflow: hidden;
 }
